--- a/ui/learn/css/_map.scss
+++ b/ui/learn/css/_map.scss
@@ -30,7 +30,7 @@
     @include backdrop-blur-if-transparent;
 
     position: relative;
-    height: 90px;
+    min-height: 90px;
     color: #fff;
     box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.07);
     font-size: 1.2em;
@@ -47,7 +47,8 @@
     }
 
     @media (width < $xx-small) {
-      height: fit-content;
+      min-height: fit-content;
+      padding: 4px 2.5em 4px 0;
     }
 
     img {
@@ -64,17 +65,12 @@
 
     h3 {
       font-size: 1.6em;
-      letter-spacing: 1px;
-      margin: 0 0 1px -1px;
-    }
-
-    &.vvv h3 {
-      font-size: 1.4em;
-      letter-spacing: 1px;
+      line-height: 1;
     }
 
     p {
-      margin: 0;
+      margin: 2px 0 0 0;
+      line-height: 1.2;
     }
 
     @keyframes soft-bright {
